# ya-wiki-api

./: .env.example  .gitignore  CLAUDE.md  LICENSE  README.md  pyproject.toml  test_all_endpoints.py
docs/: llm-guide.md
docs/new/: Получить список подстраниц - Страницы _ Яндекс Вики.htm  Получить список подстраниц по слагу - Страницы _ Яндекс Вики.htm
docs/new/Получить список подстраниц - Страницы _ Яндекс Вики_files/: _app.js  common.5791c961.css  common.5791c961.js  init.28a01342.js  runtime.f588fa9e.js
docs/new/Получить список подстраниц по слагу - Страницы _ Яндекс Вики_files/: _doc.js  _error.js  tag.js  vendor.9e352f67.css
src/ya_wiki_api/: __init__.py  _http.py  client.py  grids.py  models.py  pages.py
